<resources>
    <string name="app_name">아이돔</string>
    <string name="title_activity_onboard">내 정보 입력</string>
    <string name="inputText">입력</string>
    <string name="emailPlaceholder">이메일</string>
    <string name="inputEmailPlaceholder">이메일을 입력해주세요.</string>
    <string name="pwPlaceholder">비밀번호</string>
    <string name="inputPwPlaceholder">비밀번호를 입력해주세요.</string>
    <string name="inputPwAgainPlaceholder">비밀번호를 한 번 더입력해주세요.</string>
    <string name="doneInteraction">완료</string>
    <string name="loginInteraction">로그인</string>
    <string name="getCodeInteraction">인증번호 받기</string>
    <string name="loginToContinueInteraction">로그인 후 계속하기</string>
    <string name="getCertificationInteraction">인증번호 발급받기</string>
    <string name="sendCertificationAgainInteraction">인증번호 재요청</string>
    <string name="CertificationContinueInteraction">계속하기</string>
    <string name="lostPasswordInteraction">비밀번호를 잊으셨나요?</string>
    <string name="EnterAuthCodeInteraction">인증번호 입력</string>
    <string name="checkPostInteraction">본문 확인</string>
    <string name="initializationInteraction">선택 초기화</string>
    <string name="initializationInputInteraction">입력 초기화</string>
    <string name="registerInteraction">입력 완료</string>
    <string name="filterDoneInteraction">필터링 완료</string>
    <string name="loginText">로그인</string>
    <string name="loginWithInuEmailText">인천대학교 이메일로 로그인해주세요.</string>
    <string name="noAccountText">아직 계정이 없으신가요?</string>
    <string name="signUpInteraction">회원 가입</string>
    <string name="welcomeText">안녕하세요! 가입을 축하드려요.</string>
    <string name="welcomeText2">로그인 후 인천대학교 기숙사 룸메이트 매칭을 위한 \n 기본 정보를 알려주세요.</string>
    <string name="EmailSentText">지금 이메일로 인증번호를 보내드렸어요.🕊 \n 메일이 오지 않았으면 스팸함을 확인해주세요.</string>
    <string name="sendCertificationText">메일함에서 인증번호를 확인해주세요.</string>
    <string name="inputCertificationText">인증번호를 입력해주세요.</string>
    <string name="needEmailText">가입시 사용한 인천대학교 이메일이 필요해요.</string>
    <string name="passwordText">비밀번호</string>
    <string name="checkPasswordText">비밀번호 확인</string>
    <string name="needInuEmailText">인천대학교 이메일(@inu.ac.kr)이 필요해요.</string>
    <string name="moreEightCharactersText">•  8자 이상 입력</string>
    <string name="passwordConditionsText">•  영문 소문자/숫자/특수 문자 조합</string>
    <string name="emailText">이메일</string>
    <string name="firstDormInteraction">1기숙사</string>
    <string name="dorm">기숙사</string>
    <string name="secondDormInteraction">2기숙사</string>
    <string name="thirdDormIntercation">3기숙사</string>
    <string name="letMeKnowBaseInfoForMatching">룸메이트 매칭을 위한 기본정보를 알려주세요!</string>
    <string name="noMoreRoomMates">더 볼 수 있는 매칭 이미지가 없어요. \n 필터를 새롭게 조정해보세요.</string>
    <string name="selectDislikeFactor">불호요소가 있는 내 습관을 미리 알려주세요.</string>
    <string name="gender">성별</string>
    <string name="man">남성</string>
    <string name="woman">여성</string>
    <string name="residencePeriod">입사 기간</string>
    <string name="sixteenWeeks">짧은 기간</string>
    <string name="twentyFourWeeks">긴 기간</string>
    <string name="habit">내 습관</string>
    <string name="snoring">코골이</string>
    <string name="grinding">이갈이</string>
    <string name="smoking">흡연</string>
    <string name="eatingInside">실내 음식 섭취 함</string>
    <string name="wearEarphones">이어폰 착용 안 함</string>
    <string name="age">나이</string>
    <string name="ageText">살</string>
    <string name="dislikes">불호 요소</string>
    <string name="disleksGuideText">선택하신 요소를 가진 룸메이트는 나와 매칭되지 않아요.</string>
    <string name="ageGuideText">선택하신 연령대의 룸메이트만 나와 매칭돼요.</string>
    <string name="myComment">내가 쓴 댓글</string>
    <string name="myPost">내가 쓴 글</string>
    <string name="latestOrder">최신순</string>
    <string name="pastOrder">과거순</string>
    <string name="dormCardNum">3</string>
    <string name="dormCardText">기숙사</string>
    <string name="periodCardText">긴 </string>
    <string name="periodUnitCardText">기간</string>
    <string name="genderCardText">성별</string>
    <string name="ageCardText">24</string>
    <string name="ageCardUnit">세</string>
    <string name="mbtiCardText">MBTI&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="snoringCardText">코골이 없음</string>
    <string name="grindingCardText">이갈이 없음</string>
    <string name="smokingCardText">흡연 안 함</string>
    <string name="eatingInsideCardText">실내 음식 섭취 안함</string>
    <string name="wearEarphonesCardText">이어폰 착용 가능</string>
    <string name="wakeUpTimeCardText">기상시간⠀</string>
    <string name="cleaningCardText">정리정돈⠀</string>
    <string name="showerTimeCardText">샤워시간⠀</string>
    <string name="moreCardText">우하하하하하하하우하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하하우하하하하하하하하하하하하하하하하하하하하하하하하하하하하</string>
    <string name="semesterNum">1</string>
    <string name="semesterText">학기</string>
    <string name="roommateMatchingText">룸메이트 매칭 관리</string>
    <string name="withIdormText">아이돔과 함께해요.</string>
    <string name="RoomMateMatchingInteraction">룸메이트 매칭 시작하기</string>
    <string name="nicknameMyPageText">닉네임닉네임닉네임</string>
    <string name="matchingManageText">닉네임닉네임닉네임</string>
    <string name="matchingManageInteraction">매칭 이미지</string>
    <string name="dislikedmateManageInteraction">싫어요한 룸메</string>
    <string name="likedmateManageInteraction">좋아요한 룸메</string>
    <string name="showMyImageSwitchText">내 이미지 매칭페이지에 공개하기</string>
    <string name="likedMateListText">좋아요한 룸메</string>
    <string name="dislikedMateListText">싫어요한 룸메</string>
    <string name="myInformationSettingText">내 정보 관리</string>
    <string name="nickNameText">닉네임</string>
    <string name="userNickNameText">user 닉네임</string>
    <string name="changePasswordText">비밀번호 변경</string>
    <string name="notificationSettingText">알림 설정</string>
    <string name="userEmailText">abcdefg@inu.ac.kr</string>
    <string name="serviceAgreeText">서비스 약관 자세히 보기</string>
    <string name="versionInfoText">버전 정보</string>
    <string name="nowVersionInfoText">n.n.n</string>
    <string name="withdrawalText">회원탈퇴</string>
    <string name="enterNickNameText">idorm 프로필 닉네임을 입력해주세요.</string>
    <string name="nickNameUnitText">pt</string>
    <string name="nickNameMaxLengthText">9</string>
    <string name="useEnterLengthText">n</string>
    <string name="nickNameLengthCaution">•  최소 2글자에서 8글자를 입력해주세요.</string>
    <string name="nickNameWithoutBlankCaution">•  공백없이 입력해주세요.</string>
    <string name="nickNameInputLangCaution">•  영문, 한글, 숫자만 입력할 수 있어요.</string>
    <string name="allNotificationSettingText">전체 알림 설정</string>
    <string name="pushNotificationSettingText">푸시 알림 설정</string>
    <string name="calNotiText">캘린더 일정 알림 받기</string>
    <string name="commentNotiText">커뮤니티 댓글 알림 받기</string>
    <string name="nestedCommentNotiText">커뮤니티 답글 알림 받기</string>
    <string name="appInfoNotiText">어플 정보 알림 받기</string>
    <string name="withdrawalConfirmText">idorm과 이별을 원하시나요?\n너무 슬퍼요 😥</string>
    <string name="withdrawalQuText">회원님이 탈퇴하시려는 이유가 궁금해요.</string>
    <string name="answerTooMuchText">너무 많이 이용해요.</string>
    <string name="answerDoNotUsingText">idorm 을 잘 이용하지 않아요.</string>
    <string name="answerNoTechText">원하는 기능이 많지 않아요.</string>
    <string name="answerBadUserText">불쾌감을 주는 사용자가 있어요.</string>
    <string name="etcText">기타</string>
    <string name="withdrawalCationText">idorm 탈퇴 전 알아두셔야 해요!</string>
    <string name="caution1">📌 idorm 탈퇴 후에도 커뮤니티 내에는\n작성하신 글과 댓글은 남아 있어요.</string>
    <string name="caution2">📌 프로필과 내 정보 데이터가 사라지며\n다시 복구할 수 없어요.</string>
    <string name="caution3">📌 아이돔 가입은 일정 기간 동안 제한 되며\n 다시 가입할 수 있어요.</string>
    <string name="withdrawalCancelInteraction">다시 생각해볼래요❤</string>
    <string name="withdrawalDoneInteraction">탈퇴</string>
    <string name="declarationInteraction">신고하기</string>
    <string name="matchingImageViolence">idorm 가이드라인에 위배되는 매칭 프로필 이미지</string>
    <string name="chatToMateInteraction">룸메이트와 채팅하기</string>
    <string name="deleteLikedMateInteraction">좋아요한 룸메이트 삭제하기</string>
    <string name="refreshInteraction">새로고침</string>
    <string name="noNetworkConnection">앗, 네트워크 연결을 다시 확인해주세요! 😲</string>
    <string name="close">닫기</string>
    <string name="enterProfileNickname">idorm 프로필 닉네임을 입력해주세요.</string>
    <string name="nickNameLengthCondition">•  최소 2글자에서 8글자를 입력해주세요.</string>
    <string name="nickNameNoSpaceCondition">•  공백없이 입력해주세요.</string>
    <string name="nickNameCharacterCondition">•  영문, 한글, 숫자만 입력할 수 있어요.</string>
    <string name="proceed">계속하기</string>
    <string name="completeRegistration">가입완료</string>
    <string name="signout">로그아웃</string>
    <string name="editImage">이미지 편집</string>
    <string name="skipInteraction">정보 입력 건너뛰기</string>
    <string name="myTeamCalendarSchedule">우리방 일정</string>
    <string name="univCalendarSchedule">기숙사 일정</string>
    <string name="inviteTeam">룸메이트 초대</string>
    <string name="registerSchedule">일정 등록</string>
    <string name="registerTeamSchedule">우리방 일정</string>
    <string name="registerSleepover">외박 일정</string>
    <string name="teamScheduleName">우리방 일정 이름</string>
    <string name="startDate">시작</string>
    <string name="endDate">종료</string>
    <string name="scheduleTarget">일정 참여자</string>
    <string name="deleteSchedule">일정 삭제</string>
    <string name="sleepoverSchedule">외박 일정</string>
    <string name="sleepoverStartDate">시작</string>
    <string name="sleepoverEndDate">종료</string>
    <string name="postViolence">idorm의 커뮤니티 가이드라인에 위배되는 게시글</string>
    <string name="changePasswordCompleted">닉네임 변경이 완료되었습니다. 변경된 비밀번호로 다시 로그인해주세요.</string>
    <string name="failedToChangePassword">닉네임 변경에 실패했습니다. 잠시후 다시 시도해주세요.</string>
    <string name="privacyPolicyAgreement">개인정보 처리방침 필수동의</string>
    <string name="unknownError">알 수 없는 에러가 발생했습니다.</string>
    <string name="kakaoLinkNotFound">카카오톡 오픈채팅 링크를 찾을 수 없거나 올바르지 않아요.</string>
    <string name="withdrawSuccess">탈퇴 처리가 성공적으로 완료되었습니다.\n언제든지 다시 돌아와 주세요!</string>
    <string name="withdrawFailure">회원탈퇴에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="ok">확인</string>
    <string name="chatWithMate">룸메이트와 채팅하기</string>
    <string name="removeFromLikedMate">좋아요한 룸메에서 삭제</string>
    <string name="removeDislikedMate">싫어요한 룸메에서 삭제</string>
    <string name="report">신고하기</string>
    <string name="changePasswordSuccess">비밀번호 변경이 완료되었습니다. 변경된 비밀번호로 다시 로그인해주세요.</string>
    <string name="changePasswordFailure">비밀번호 변경에 실패했습니다. 잠시후 다시 시도해주세요.</string>
    <string name="likedMates">좋아요한 룸메</string>
    <string name="disLikedMates">싫어요한 룸메</string>
    <string name="contentHint">기숙사에 있는 학우들에게 질문하거나\n함께 이야기를 나누어 보세요.</string>
    <string name="titleHint">제목</string>
    <string name="noPost">게시글이 없는 것 같아요.\n새로운 글을 등록해볼까요?</string>
    <string name="enterCommentHint">댓글을 입력해주세요.</string>
    <string name="mypageCommunity">커뮤니티 관리</string>
    <string name="postWrote">내가 쓴 글</string>
    <string name="commentsWrote">내가 쓴 댓글</string>
    <string name="postsLiked">추천한 글</string>
    <string name="selectReportReason">신고 사유를 선택해주세요.</string>
    <string name="checkNotice">기숙사 공지사항 확인하기</string>
    <string name="enableLike">공감하기</string>
    <string name="disableLike">공감취소</string>
    <string-array name="reportReasons1_text">
        <item>도배</item>
        <item>광고 / 스팸</item>
        <item>음란물 / 선정성</item>
        <item>욕설</item>
        <item>사칭 / 허위</item>
        <item>기타</item>
    </string-array>
    <string-array name="reportReasons1_value">
        <item>PLASTER</item>
        <item>ADVERTISING_SPAM</item>
        <item>OBSCENE_MATERIAL</item>
        <item>ABUSE</item>
        <item>FALSE_INFORMATION</item>
        <item>ETC</item>
    </string-array>
    <string-array name="reportReasons2_text">
        <item>불건전한 닉네임 / 프로필사진</item>
        <item>욕설</item>
        <item>사칭 / 허위</item>
        <item>기타</item>
    </string-array>
    <string-array name="reportReasons2_value">
        <item>MEMBER</item>
        <item>POST</item>
        <item>COMMENT</item>
        <item>ETC</item>
    </string-array>
</resources>