<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="org.appcenter.inudorm.presentation.mypage.MyMatchingProfileActivity" />
        <variable
            name="viewModel"
            type="org.appcenter.inudorm.presentation.mypage.MyMatchingProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="4dp">

        <org.appcenter.inudorm.presentation.component.MatchingCard
            android:id="@+id/matchingCard"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dormNum="DORM1"
            app:joinPeriod="WEEK16"
            app:isSnoring="@string/snoringCardText"
            app:isGrinding="@string/grindingCardText"
            app:isSmoking="@string/smokingCardText"
            app:isAllowedFood="@string/eatingInsideCardText"
            app:isWearEarphones="@string/wearEarphonesCardText"
            app:wakeUpTime="@string/wakeUpTimeCardText"
            app:cleanUpStatus="@string/cleaningCardText"
            app:showerTime="@string/showerTimeCardText"
            app:mbti="@string/mbtiCardText"
            app:wishText="@string/moreCardText"
            app:gender="MALE"
            app:age="21"

            app:mate="@{viewModel.myPageState.data}"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout16"
            app:layout_constraintStart_toStartOf="parent"

            />


        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:background="@drawable/view_shadow_upper"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout16"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout16"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:background="@color/white"
            android:elevation="10dp"
            android:paddingHorizontal="24dp"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/doneButton"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:background="@drawable/view_button_round_6"
                android:fontFamily="@font/notosans_medium"
                android:onClick="@{() -> activity.onBackPressed()}"

                android:includeFontPadding="false"
                android:text="@string/doneInteraction"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:background="@drawable/view_button_round_6_gray_100"
                android:onClick="@{() -> activity.editImage()}"

                android:drawableStart="@drawable/ic_edit"
                android:fontFamily="@font/notosans_medium"
                android:includeFontPadding="false"
                android:paddingHorizontal="26dp"
                android:text="@string/editImage"
                android:textColor="@color/iDorm_gray_400"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>