<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="passwordViewModel"
            type="org.appcenter.inudorm.presentation.register.PasswordPromptViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        tools:context=".presentation.register.EmailPromptFragment">

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/inputPasswordText"
            android:fontFamily="@font/notosans_medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:includeFontPadding="false"

            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="51dp"

            android:text=""
            android:fontFamily="@font/notosans_medium"
            android:textSize="14sp"
            android:includeFontPadding="false"

            android:hint="@string/inputPwPlaceholder"
            android:textColorHint="@color/iDorm_gray_300"
            android:inputType="textPassword"

            android:background="@drawable/edit_text_round_stroke_gray_400"
            android:layout_marginTop="8dp"
            android:paddingLeft="9dp"
            app:layout_constraintStart_toStartOf="@id/passwordText"
            app:layout_constraintTop_toBottomOf="@id/passwordText" />


        <TextView
            android:id="@+id/passwordText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="42dp"
            android:fontFamily="@font/notosans_medium"
            android:includeFontPadding="false"
            android:text="@string/checkPasswordText"
            android:textColor="@color/black"

            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/editPassword"
            app:layout_constraintTop_toBottomOf="@id/editPassword" />

        <EditText
            android:id="@+id/editPassword2"
            android:layout_width="match_parent"
            android:layout_height="51dp"

            android:text=""
            android:fontFamily="@font/notosans_medium"
            android:textSize="14sp"
            android:includeFontPadding="false"

            android:hint="@string/inputPwAgainPlaceholder"
            android:textColorHint="@color/iDorm_gray_300"
            android:inputType="textPassword"

            android:background="@drawable/edit_text_round_stroke_gray_400"
            android:layout_marginTop="8dp"
            android:paddingLeft="9dp"
            app:layout_constraintStart_toStartOf="@id/passwordText2"
            app:layout_constraintTop_toBottomOf="@id/passwordText2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="53dp"

            android:text="@string/registerInteraction"
            android:fontFamily="@font/notosans_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:includeFontPadding="false"

            android:background="@drawable/button_round_10"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>